# simple_chat_graphql

./: Cargo.toml  readme.adoc
client/: Cargo.toml
client/graphql/: count_subscription.graphql  message_history_query.graphql  message_modification.graphql  message_query.graphql  message_subscription.graphql  schema.graphql
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/components/: domain.rs  mod.rs  mutation.rs  query.rs  subscription.rs
src/: main.rs
