[package]
name = "simple_chat_graphql_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
graphql-ws-client = { version = "0.10.1", features = ["graphql_client", "tungstenite", "client-graphql-client"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
log = "0.4.22"
futures = { version = "0.3" }
env_logger = "0.11.3"
async-tungstenite = { version = "0.26", features = [
    "async-std-runtime",
    "tokio-runtime",
] }
async-std = { version = "1.9", features = ["attributes"] }