[package]
name = "simple_chat_graphql_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "macros", "tokio"] }
futures = { version = "0.3.30" }
juniper = { version = "0.16.1", default-features = false }
juniper_axum = { version = "0.1.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.4.0", features = ["graphql-transport-ws", "graphql-ws"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.118"
time = "0.3.36"
tokio = { version = "1.38.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-stream = "0.1.15"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"